--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+  font-family: sans-serif;
+  background-color: black;
   color: white;
+  text-align: center;
+  padding: 20px;
+  font-weight: bold;
+  margin: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  border: 3px solid black;
+  margin: 50px;
+  padding: 10px;
+  padding-right: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addtask{
+  background-color: black;
+  color: white;
+  padding: 15px 18px;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.main{
+  margin: 0px;
+  padding: 8px;
+  background-color: rgb(170, 186, 203);
+}
+
+.renderList{
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2px;
+}
+
+.task{
+  font-family: serif;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.desc{
+  font-family: serif;
+  font-size: x-large;
+  padding-right: 100px;
+}
+
+.list{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.delete{
+  border: 2px solid rgb(194, 72, 72);
+  background-color: rgb(194, 72, 72);
+  color: white;
+  padding: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.complete{
+  border: 2px solid rgb(56, 153, 56);
+  background-color: rgb(56, 153, 56);
+  color: white;
+  padding: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.complete:hover{
+  background-color: rgb(6, 86, 6);
+}
+
+.delete:hover{
+  background-color: red;
 }
